# cpp-sdl2-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: Application.h  Display.h  Node.h
src/: Application.cpp  Display.cpp  main.cpp
